--- a/metadata/page/page.reason.json
+++ b/metadata/page/page.reason.json
@@ -10,13 +10,13 @@
           "_id": "page.reason--radios.auto_name__13--radio.auto_value__5",
           "_type": "radio",
           "label": "Solicitor",
-          "value": "auto_value__5"
+          "value": "Solicitor"
         },
         {
           "_id": "page.reason--radios.auto_name__13--radio.auto_value__6",
           "_type": "radio",
           "label": "Family member",
-          "value": "auto_value__6"
+          "value": "Family member"
         },
         {
           "_id": "page.reason--radios.auto_name__13--radio.auto_value__7",
@@ -28,7 +28,7 @@
             "name": "auto_name__14"
           },
           "label": "Other",
-          "value": "auto_value__7"
+          "value": "Other"
         }
       ],
       "legend": "What is the reason you want to find this person?",
